--- a/.github/workflows/02-workflow-triggers.yaml
+++ b/.github/workflows/02-workflow-triggers.yaml
@@ -4,5 +4,5 @@ jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
-      name: Show the trigger
-      run: echo "I've been triggered by a(n) ${{ github.event_name }}"
+      - name: Show the trigger
+        run: echo "I've been triggered by a(n) ${{ github.event_name }}"
