--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -8,3 +8,18 @@ jobs:
         run: | 
           echo "This job is running on ubuntu runner"
           echo "Runner OS: $RUNNER_OS"
+  windows-echo:
+    runs-on: windows-latest
+    steps:
+      - name: Show OS
+        shell: bash
+        run: |
+          echo "This job is running on windows runner"
+          echo "Runner OS: $RUNNER_OS"
+  mac-echo:
+    runs-on: macos-latest
+    steps:
+      - name: Show OS
+        run: |
+          echo "This job is running on mac runner"
+          echo "Runner OS: $RUNNER_OS"
