--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,4 +1,5 @@
 name: 07-expressions
+
 on:
   push:
   workflow_dispatch:
@@ -19,6 +20,6 @@ jobs:
           echo "Runner OS: ${{ runner.os }}"
       - name: "[debug] print when triggered from master"
         if: ${{ inputs.debug && github.ref == 'refs/heads/master' }}
-        run: echo "I was triggered form master"
+        run: echo "I was triggered from master"
       - name: Greeting
         run: echo "Hello, World!"
